@@ -15,45 +15,33 @@ This project is a site, which enables you to make your own car configurations an
 - learn PHP
 - learn how to use Twig templates
 - learn more about SQL architecture
-- learn
+- learn HTML more
+- understand the basics of backend development
 
 
 
 ## Technologies Used
-- JavaFx - version 15.0.1
-- FXML
+- PHP
+- Twig
+- HTML
+- Bootstrap
+- CSS
+- JavaScript
 
 
 ## Features
-- 15 weapons like shotgun, poison daggers and many more
-- various enemies (following the player, creating copies of them themselvses when destroyed and more)
-- time-limited powerups and animations
-- randomly generated map
-- 4 floors
-- every floor has 25 rooms
-- every room is full of various blocks (bush, spikes, walls, exploding barells, etc) 
-- special room "shop", where you can buy new weapons
-- static objects destruction with bombs and explosions
-- hiding in bush
-- map and interface
+- car configuration
+- possibility to see every single configuration created by you
+- many animations
+- registering and loging
+- many video's
+
 
 
 ## Screenshots
 ![Example screenshot](./img/screen1.png)
 
 
-## Setup
-1.File -> Project Structure -> Libraries -> Add (+) -> javafx-sdk-15.0.1/lib -> OK
-
-2.File -> Project Structure -> Modules -> lib -> OK
-
-3.Run -> Edit configuration -> VM options and paste:
-
-Windows: --module-path "..\TheGame\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml
-
-
-
 ## Acknowledgements
-- Project was created in cooperation with Dawid Kwapisz (https://github.com/dkwapisz).
-- This project was inspired by "The Binding of Isaac"
-- Movenemnt handling was based on https://github.com/ashish2199/Aidos
+- Project was created in cooperation with Wiktor Tekiela (githubLink) 
+- This project was inspired by the official site of ferrari "https://www.ferrari.com/en-PL"
